{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 292,
  "lineage": "78f3bb5d-3216-6051-05e7-268662d2538c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:loadbalancer/app/blue/9aa33201e1fac8fc",
            "arn_suffix": "app/blue/9aa33201e1fac8fc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "blue-1329453424.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:loadbalancer/app/blue/9aa33201e1fac8fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blue",
            "security_groups": [
              "sg-0313316f89f2fdb79"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003c324b851d2c815"
              },
              {
                "subnet_id": "subnet-0f0815ad2129ca987"
              }
            ],
            "subnets": [
              "subnet-003c324b851d2c815",
              "subnet-0f0815ad2129ca987"
            ],
            "vpc_id": "vpc-01171cbc8f90fe977",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_subnet.main-subnet-public-1",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:loadbalancer/app/green/8f66f4b64bda12a3",
            "arn_suffix": "app/green/8f66f4b64bda12a3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "green-904507276.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:loadbalancer/app/green/8f66f4b64bda12a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "green",
            "security_groups": [
              "sg-0313316f89f2fdb79"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-003c324b851d2c815"
              },
              {
                "subnet_id": "subnet-0f0815ad2129ca987"
              }
            ],
            "subnets": [
              "subnet-003c324b851d2c815",
              "subnet-0f0815ad2129ca987"
            ],
            "vpc_id": "vpc-01171cbc8f90fe977",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_subnet.main-subnet-public-1",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener/app/blue/9aa33201e1fac8fc/ace97c58176fa7f9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/web-blue/8f4e778876494bdc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener/app/blue/9aa33201e1fac8fc/ace97c58176fa7f9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:loadbalancer/app/blue/9aa33201e1fac8fc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb_blue",
            "aws_alb_target_group.web-blue",
            "aws_security_group.alb_sec_group",
            "aws_subnet.main-subnet-public-1",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener/app/green/8f66f4b64bda12a3/60f21c4c0aa8ad12",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/web-green/cf1a885722a50d22",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener/app/green/8f66f4b64bda12a3/60f21c4c0aa8ad12",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:loadbalancer/app/green/8f66f4b64bda12a3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb_green",
            "aws_alb_target_group.web-green",
            "aws_security_group.alb_sec_group",
            "aws_subnet.main-subnet-public-1",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "myadmin-listener-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-blue/c87d7e99c108afc2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener-rule/app/blue/9aa33201e1fac8fc/ace97c58176fa7f9/d2696615e4828f78",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/phpmyadmin*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener-rule/app/blue/9aa33201e1fac8fc/ace97c58176fa7f9/d2696615e4828f78",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener/app/blue/9aa33201e1fac8fc/ace97c58176fa7f9",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb_blue",
            "aws_alb_listener.http-blue",
            "aws_alb_target_group.back-instance-blue",
            "aws_alb_target_group.web-blue",
            "aws_security_group.alb_sec_group",
            "aws_subnet.main-subnet-public-1",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "myadmin-listener-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-green/7b9541db65bfd006",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener-rule/app/green/8f66f4b64bda12a3/60f21c4c0aa8ad12/60b96da81e33c840",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/phpmyadmin*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener-rule/app/green/8f66f4b64bda12a3/60f21c4c0aa8ad12/60b96da81e33c840",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:listener/app/green/8f66f4b64bda12a3/60f21c4c0aa8ad12",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb_green",
            "aws_alb_listener.http-green",
            "aws_alb_target_group.back-instance-green",
            "aws_alb_target_group.web-green",
            "aws_security_group.alb_sec_group",
            "aws_subnet.main-subnet-public-1",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "back-instance-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-blue/c87d7e99c108afc2",
            "arn_suffix": "targetgroup/back-instance-blue/c87d7e99c108afc2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-blue/c87d7e99c108afc2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "back-instance-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "back-instance-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-green/7b9541db65bfd006",
            "arn_suffix": "targetgroup/back-instance-green/7b9541db65bfd006",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-green/7b9541db65bfd006",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "back-instance-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/web-blue/8f4e778876494bdc",
            "arn_suffix": "targetgroup/web-blue/8f4e778876494bdc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/web-blue/8f4e778876494bdc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/web-green/cf1a885722a50d22",
            "arn_suffix": "targetgroup/web-green/cf1a885722a50d22",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/web-green/cf1a885722a50d22",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "myadmin-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-blue/c87d7e99c108afc2-20211210115314680600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-blue/c87d7e99c108afc2",
            "target_id": "i-0007fd1c6135f5033"
          },
          "dependencies": [
            "aws_alb_target_group.back-instance-blue",
            "aws_iam_instance_profile.ec2-profile",
            "aws_iam_role.ec2-role",
            "aws_instance.back_instance_blue",
            "aws_security_group.back",
            "aws_subnet.main-subnet-public-1",
            "aws_vpc.main-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "myadmin-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-green/7b9541db65bfd006-20211210115314451900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:413391068907:targetgroup/back-instance-green/7b9541db65bfd006",
            "target_id": "i-014f68cab78959cd2"
          },
          "dependencies": [
            "aws_alb_target_group.back-instance-green",
            "aws_iam_instance_profile.ec2-profile",
            "aws_iam_role.ec2-role",
            "aws_instance.back_instance_green",
            "aws_security_group.back",
            "aws_subnet.main-subnet-public-1",
            "aws_vpc.main-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:security-group/sg-0c80c8f51cd8f473a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c80c8f51cd8f473a",
            "ingress": [],
            "name": "default",
            "owner_id": "413391068907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back_instance_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-099ccc441b2ef41ec",
            "arn": "arn:aws:ec2:eu-central-1:413391068907:instance/i-0007fd1c6135f5033",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-0007fd1c6135f5033",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e05cc15b6ab9a9af",
            "private_dns": "ip-10-10-1-133.eu-central-1.compute.internal",
            "private_ip": "10.10.1.133",
            "public_dns": "ec2-18-159-59-91.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.159.59.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ba7b3350eef11b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003c324b851d2c815",
            "tags": {
              "Name": "back"
            },
            "tags_all": {
              "Name": "back"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0828c8e7df59c4d2c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-profile",
            "aws_iam_role.ec2-role",
            "aws_security_group.back",
            "aws_subnet.main-subnet-public-1",
            "aws_vpc.main-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "back_instance_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-099ccc441b2ef41ec",
            "arn": "arn:aws:ec2:eu-central-1:413391068907:instance/i-014f68cab78959cd2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-014f68cab78959cd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f224a3376650215",
            "private_dns": "ip-10-10-1-204.eu-central-1.compute.internal",
            "private_ip": "10.10.1.204",
            "public_dns": "ec2-3-64-214-171.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.214.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09672295bd5100501",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003c324b851d2c815",
            "tags": {
              "Name": "back"
            },
            "tags_all": {
              "Name": "back"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0828c8e7df59c4d2c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-profile",
            "aws_iam_role.ec2-role",
            "aws_security_group.back",
            "aws_subnet.main-subnet-public-1",
            "aws_vpc.main-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:internet-gateway/igw-016d9c252a33278fd",
            "id": "igw-016d9c252a33278fd",
            "owner_id": "413391068907",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:route-table/rtb-0e10afbae3bcbcfcf",
            "id": "rtb-0e10afbae3bcbcfcf",
            "owner_id": "413391068907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016d9c252a33278fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-crt"
            },
            "tags_all": {
              "Name": "main-public-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e67f2d8531730b6",
            "route_table_id": "rtb-0e10afbae3bcbcfcf",
            "subnet_id": "subnet-003c324b851d2c815"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-crt",
            "aws_subnet.main-subnet-public-1",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-crta-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f50b29d718289a27",
            "route_table_id": "rtb-0e10afbae3bcbcfcf",
            "subnet_id": "subnet-0f0815ad2129ca987"
          },
          "dependencies": [
            "aws_internet_gateway.main-igw",
            "aws_route_table.main-public-crt",
            "aws_subnet.main-subnet-public-2",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:security-group/sg-0313316f89f2fdb79",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0313316f89f2fdb79",
            "ingress": [],
            "name": "Application Load Balancer Security Group",
            "name_prefix": "",
            "owner_id": "413391068907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:security-group/sg-0828c8e7df59c4d2c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0828c8e7df59c4d2c",
            "ingress": [],
            "name": "Back Application Security Group",
            "name_prefix": "",
            "owner_id": "413391068907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:security-group/sg-0f8747d1a95ac1a97",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f8747d1a95ac1a97",
            "ingress": [],
            "name": "Web Application Security Group",
            "name_prefix": "",
            "owner_id": "413391068907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3150189558",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0313316f89f2fdb79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1471454153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0313316f89f2fdb79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3597119598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0313316f89f2fdb79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1626205659",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0313316f89f2fdb79",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sec_group",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-474503476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_egress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2062499712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_egress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4030255371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_egress_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1358664146",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2745868216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_ingress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1874874187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-354468365",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "back_ingress_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3935267645",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0828c8e7df59c4d2c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.back",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "front_ingress_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2255645117",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1418751068",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2537243042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3101746275",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_egress_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2876046470",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3767250663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3125664465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1442968402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f8747d1a95ac1a97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:subnet/subnet-0943b30b23513410a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-0943b30b23513410a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413391068907",
            "tags": {
              "Name": "main-subnet-private-1"
            },
            "tags_all": {
              "Name": "main-subnet-private-1"
            },
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:subnet/subnet-0800079602029e6ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0800079602029e6ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "413391068907",
            "tags": {
              "Name": "main-subnet-private-2"
            },
            "tags_all": {
              "Name": "main-subnet-private-2"
            },
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:subnet/subnet-003c324b851d2c815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-003c324b851d2c815",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413391068907",
            "tags": {
              "Name": "main-subnet-public-1"
            },
            "tags_all": {
              "Name": "main-subnet-public-1"
            },
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:subnet/subnet-0f0815ad2129ca987",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0f0815ad2129ca987",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413391068907",
            "tags": {
              "Name": "main-subnet-public-2"
            },
            "tags_all": {
              "Name": "main-subnet-public-2"
            },
            "vpc_id": "vpc-01171cbc8f90fe977"
          },
          "dependencies": [
            "aws_vpc.main-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:413391068907:vpc/vpc-01171cbc8f90fe977",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08876a8302d518f5f",
            "default_route_table_id": "rtb-0835606db123a243c",
            "default_security_group_id": "sg-0c80c8f51cd8f473a",
            "dhcp_options_id": "dopt-0163266c1dfd7b5c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01171cbc8f90fe977",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0835606db123a243c",
            "owner_id": "413391068907",
            "tags": {
              "Name": "main-vpc-1"
            },
            "tags_all": {
              "Name": "main-vpc-1"
            }
          }
        }
      ]
    }
  ]
}